my-website/gitops/infrastructure/traefik/metadata/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins
  namespace: jenkins
spec:
  entryPoints:
    - websecure
  tls:
    options:
      name: infra-tls
      namespace: traefik
  routes:
    - match: Host(`jenkins.lucky-gun.com`)
      kind: Rule
      priority: 300
      middlewares:
        - name: edge-admin
          namespace: traefik
      services:
        - name: jenkins
          port: 8080
---
#apiVersion: traefik.io/v1alpha1
#kind: IngressRoute
#metadata:
#  name: argocd
#  namespace: argocd
#spec:
#  entryPoints:
#    - websecure
#  tls:
#    options:
#      name: infra-tls
#      namespace: traefik
#  routes:
#    - match: Host(`argocd.lucky-gun.com`) && HeaderRegexp(`Content-Type`,`application/grpc.*`)
#      kind: Rule
#      priority: 300
#      middlewares:
#        - name: edge-admin
#          namespace: traefik
#      services:
#        - name: argocd-server
#          port: 80
#
#    - match: Host(`argocd.lucky-gun.com`)
#      kind: Rule
#      priority: 100
#      middlewares:
#        - name: edge-admin
#          namespace: traefik
#      services:
#        - name: argocd-server
#          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rook-ceph
  namespace: rook-ceph
spec:
  entryPoints:
    - websecure
  tls:
    options:
      name: infra-tls
      namespace: traefik
  routes:
    - match: Host(`infra.lucky-gun.com`)
      kind: Rule
      priority: 300
      middlewares:
        - name: edge-admin
          namespace: traefik
      services:
        - name: rook-ceph-mgr-dashboard
          port: 7000
          scheme: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: traefik
spec:
  entryPoints:
    - websecure
  tls:
    options:
      name: infra-tls
      namespace: traefik
  routes:
    - match: Host(`dashboard.lucky-gun.com`)
      kind: Rule
      priority: 300
      middlewares:
        - name: edge-admin
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-www-redirect
  namespace: apps
spec:
  entryPoints:
    - websecure
  tls:
    options:
      name: infra-tls
      namespace: traefik
  routes:
    - match: Host(`www.lucky-gun.com`)
      kind: Rule
      priority: 300
      middlewares:
        - name: redirect-www-to-apex
          namespace: apps
      services:
        - name: noop@internal
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress
  namespace: apps
spec:
  entryPoints: 
    - websecure
  tls:
    certResolver: myresolver
    domains:
      - main: lucky-gun.com
        sans:
          - "*.lucky-gun.com"
    options:
      name: infra-tls
      namespace: traefik
  routes:
    - match: Host(`lucky-gun.com`) && (PathPrefix(`/wp-content/`) || PathPrefix(`/wp-includes/`))
      kind: Rule
      priority: 200
      middlewares:
        - name: edge-base
          namespace: traefik
      services:
        - name: wordpress-service
          port: 80

    - match: Host(`lucky-gun.com`)
      kind: Rule
      priority: 100
      middlewares:
        - name: edge-base
          namespace: traefik
        - name: waf-crs
          namespace: traefik
        - name: waf-wp-extras
          namespace: traefik
      services:
        - name: wordpress-service
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: apps
spec:
  entryPoints:
    - websecure
  tls:
    options:
      name: infra-tls
      namespace: traefik
  routes:
    - match: Host(`cloud.lucky-gun.com`) && PathPrefix(`/.well-known/`)
      kind: Rule
      priority: 300
      middlewares:
        #- name: only-cloudflare
        #  namespace: traefik
        - name: security-headers
          namespace: traefik
        - name: nc-wellknown-redirect
          namespace: traefik
        - name: nc-wellknown-redirect-webfinger
          namespace: traefik
        - name: nc-wellknown-redirect-change-password
          namespace: traefik
      services:
        - name: nextcloud-service
          port: 80

    - match: Host(`cloud.lucky-gun.com`)
      kind: Rule
      priority: 100
      middlewares:
        - name: edge-base
          namespace: traefik
        - name: waf-crs
          namespace: traefik
      services:
        - name: nextcloud-service
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mediawiki
  namespace: apps
spec:
  entryPoints:
    - websecure
  tls:
    options:
      name: infra-tls
      namespace: traefik
  routes:
    - match: Host(`wiki.lucky-gun.com`)
      kind: Rule
      middlewares:
        - name: edge-base
          namespace: traefik
        - name: waf-crs
          namespace: traefik
      services:
        - name: mediawiki-service
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  tls:
    options:
      name: infra-tls
      namespace: traefik
  routes:
    - match: Host(`grafana.lucky-gun.com`)
      kind: Rule
      middlewares:
        - name: edge-base
          namespace: traefik
        - name: waf-crs
          namespace: traefik
      services:
        - name: grafana
          port: 80
